@@ -1,0 +1,3 @@
+int foo(int a, int b) {
+  return a+b;
+}
